<resources>
    <string name="app_name">Drinks Menu Management</string>
    <string name="event_name">Event Name</string>
    <string name="event_startDate">Start Date</string>
    <string name="event_endDate">End Date</string>
    <string name="search">search</string>
    <string name="drink_name">Drink Name</string>
    <string name="menu_name">Menu Name</string>
    <string name="description">Description</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="select">select</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_comments">Recipe Comments</string>
    <string name="select_glass">Select glass</string>
</resources>